--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -23,6 +23,8 @@
     max-width: 731px
     margin: auto
   &-title
+    max-width: 242px
+    overflow-wrap: break-word
     color: $light
     font-style: normal
     font-weight: 300
@@ -52,7 +54,9 @@
     font-size: 14px
     line-height: 18px
   &__button
-    width: 65px
+    min-width: 65px
+    max-width: 110px
+    overflow-wrap: break-word
     height: 100%
     flex-wrap: wrap
     position: absolute
